Pushing new files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://camilla1219.github.io/",
+  "homepage": "https://camilla1219.github.io/the-pokedex",
   "name": "the-pokedex",
   "version": "0.1.0",
   "private": true,
